force-app/main/default/objects/PRODUCT_MASTER__c/PRODUCT_MASTER__c.object-meta.xml
<CustomObject>
    <label>PRODUCT_MASTER</label>
    <nameField>
        <label>PRODUCT_MASTER Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRODUCT_MASTERs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>