force-app/main/default/objects/PRODUCT_MASTER__c/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>