force-app/main/default/objects/PRODUCT_MASTER__c/fields/Discontinue_Date__c.field-meta.xml
<CustomField>
    <fullName>Discontinue_Date__c</fullName>
    <label>Discontinue_Date</label>
    <type>Date</type>
</CustomField>