force-app/main/default/objects/PRODUCT_MASTER__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Retail - Secured</fullName>
            </value>
            <value>
                <fullName>Retail - Unsecured</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Not classified</fullName>
            </value>
            <value>
                <fullName>AIF</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>