force-app/main/default/objects/PRODUCT_MASTER__c/fields/Source_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Modified_Date__c</fullName>
    <label>Source_Modified_Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>